# seppmail-converter

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
seppmail_converter/: crawler.py  exceptions.py  main.py
