[tool.poetry]
name = "seppmail-converter"
version = "0.1.4"
description = "Decode SEPPMail emails into EML files"
license = "MIT"
authors = ["Daniel Malik <daniel.malik@mhsp.solutions>"]
readme = "README.md"
classifiers = ["Environment :: Console"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
click = "^8.1.3"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"

[tool.poetry.scripts]
seppmail-converter = 'seppmail_converter.main:entry'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
